Some working tests for the Image class, can set initial pixel colour and make sure everything is the same value. The get pixel is yet to be fully tested

--- a/Image/CMakeLists.txt
+++ b/Image/CMakeLists.txt
@@ -23,6 +23,6 @@ find_package(GTest CONFIG REQUIRED)
 include(GoogleTest)
 enable_testing()
 add_executable(ImageTests)
-target_sources(ImageTests PRIVATE tests/ImageTests.cpp src/Image.cpp include/Image.h)
+target_sources(ImageTests PRIVATE tests/ImageTests.cpp tests/RGBATests.cpp src/Image.cpp include/Image.h)
 target_link_libraries(ImageTests PRIVATE GTest::gtest GTest::gtest_main )
 gtest_discover_tests(ImageTests)
