--- a/Particle/CMakeLists.txt
+++ b/Particle/CMakeLists.txt
@@ -14,7 +14,9 @@ set(CMAKE_CXX_STANDARD 17)
 include_directories(include)
 # Now we add our target executable and the file it is built from.
 add_executable(Particle)
-target_sources(Particle PRIVATE src/main.cpp src/Emitter.cpp src/Vec3.cpp
+add_compile_definitions(_USE_MATH_DEFINES)
+
+target_sources(Particle PRIVATE src/main.cpp src/Emitter.cpp src/Vec3.cpp src/Random.cpp 
 include/Particle.h include/Emitter.h  )
 target_link_libraries(Particle PRIVATE  fmt::fmt-header-only)
 
@@ -26,6 +28,8 @@ find_package(GTest CONFIG REQUIRED)
 include(GoogleTest)
 enable_testing()
 add_executable(ParticleTests)
-target_sources(ParticleTests PRIVATE tests/ParticleTests.cpp  src/Emitter.cpp src/Vec3.cpp include/Emitter.h include/Particle.h include/Vec3.h)
+add_compile_definitions(_USE_MATH_DEFINES)
+
+target_sources(ParticleTests PRIVATE tests/ParticleTests.cpp  src/Emitter.cpp src/Vec3.cpp src/Random.cpp  include/Emitter.h include/Particle.h include/Vec3.h)
 target_link_libraries(ParticleTests PRIVATE GTest::gtest GTest::gtest_main )
 gtest_discover_tests(ParticleTests)
